welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:10: error: ';' expected but 'else' found.
}else()
 ^SlugHunting:15: error: Unmatched closing brace '}' ignored here
}}
 ^SlugHunting:18: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:45: error: Unmatched closing brace '}' ignored here
}
^