welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
   if(isFacingTrail()==true){
   	avance()
   	baisseBrosse()
   	leveBrosse()
   	avance()
   	// Write your code here
   }
}else()

gauche()
avance()

}}


def isFacingTrail():Boolean = {

var couleuravant: Boolean = true;
if(!estFaceMur){
avance()

if(getCouleurSol() == Color.green){

    couleuravant=true
}else{
    couleuravant=false


    // Write your code here
}   
recule()

return couleuravant
}
else{
    return false;
}
}

// Copy your isFacingTrail() here
